Add hyperlink to contact site and hobbies site

--- a/HTML-PersonalSite/index.html
+++ b/HTML-PersonalSite/index.html
@@ -6,5 +6,51 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Hieu's Personal Site</title>
   </head>
-  <body></body>
+  <body>
+    <img
+      src="https://avatars0.githubusercontent.com/u/49048131?s=460&v=4"
+      alt="Ảnh đại diện của tôi"
+    />
+    <p>
+      <em>
+        Sinh viên tại trường
+        <strong
+          ><a href="http://www.dlu.edu.vn/" target="_blank">
+            Đại học Đà Lạt</a
+          ></strong
+        >.
+      </em>
+    </p>
+    <p>Tôi là 1 lập trình viên web.</p>
+    <hr />
+    <h3>Học vấn</h3>
+    <ul>
+      <li>
+        Trường Tiểu học Đà Loan
+        <ul>
+          <li>2005 - 2010</li>
+        </ul>
+      </li>
+      <li>
+        Trường Trung học cơ sở Đà Loan
+        <ul>
+          <li>2010 - 2015</li>
+        </ul>
+      </li>
+      <li>
+        Trường Trung học phổ thông Nguyễn Bỉnh Khiêm
+        <ul>
+          <li>2015 - 2018</li>
+        </ul>
+      </li>
+      <li>
+        Trường Đại học Đà Lạt
+        <ul>
+          <li>2018 - 2023</li>
+        </ul>
+      </li>
+    </ul>
+    <a href="hobbies.html">Sở thích của tôi</a> <br />
+    <a href="contact.html">Thông tin liên hệ</a>
+  </body>
 </html>
