--- a/HTML-PersonalSite/index.html
+++ b/HTML-PersonalSite/index.html
@@ -5,23 +5,36 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Hieu's Personal Site</title>
+    <link rel="stylesheet" href="/css/styles.css" />
   </head>
   <body>
-    <img
-      src="https://avatars0.githubusercontent.com/u/49048131?s=460&v=4"
-      alt="Ảnh đại diện của tôi"
-    />
-    <p>
-      <em>
-        Sinh viên tại trường
-        <strong
-          ><a href="http://www.dlu.edu.vn/" target="_blank">
-            Đại học Đà Lạt</a
-          ></strong
-        >.
-      </em>
-    </p>
-    <p>Tôi là 1 lập trình viên web.</p>
+    <table cellspacing="20px">
+      <tr>
+        <td>
+          <img
+            src="https://avatars0.githubusercontent.com/u/49048131?s=460&v=4"
+            alt="Ảnh đại diện của tôi"
+            width="200"
+            height="200"
+          />
+        </td>
+        <td>
+          <h1>Nguyễn Trọng Hiếu</h1>
+          <p>
+            <em>
+              Sinh viên tại trường
+              <strong
+                ><a href="http://www.dlu.edu.vn/" target="_blank">
+                  Đại học Đà Lạt</a
+                > </strong
+              >.
+            </em>
+          </p>
+          <p>Tôi là 1 lập trình viên web.</p>
+        </td>
+      </tr>
+    </table>
+
     <hr />
     <h3>Học vấn</h3>
     <ul>
@@ -50,6 +63,42 @@
         </ul>
       </li>
     </ul>
+
+    <!-- Kỹ năng -->
+    <hr />
+    <h3>Kỹ năng</h3>
+    <table cellspacing="20px">
+      <tr>
+        <td>
+          <table cellspacing="5px">
+            <tr>
+              <td>Nodejs</td>
+              <td>⭐️⭐️⭐️</td>
+            </tr>
+            <tr>
+              <td>.NET</td>
+              <td>⭐️⭐️</td>
+            </tr>
+          </table>
+        </td>
+
+        <td>
+          <table cellspacing="5px">
+            <tr>
+              <td>C++</td>
+              <td>⭐️⭐️</td>
+            </tr>
+            <tr>
+              <td>Web design</td>
+              <td>⭐️</td>
+            </tr>
+          </table>
+        </td>
+      </tr>
+    </table>
+
+    <!-- Sở thích và thông tin liên hệ -->
+    <hr />
     <a href="hobbies.html">Sở thích của tôi</a> <br />
     <a href="contact.html">Thông tin liên hệ</a>
   </body>
